// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-multi-select complete 1`] = `
<div
  class="m-base-select m-multi-select"
>
  <div
    class="m-base-select__popup"
    style="width: 896px;"
  >
    <div
      class="m-multi-select__input"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 896px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-multi-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  CSS Colors
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                 
                <span
                  aria-hidden="true"
                  class="m-i18n m-input-style__transparent-text"
                >
                  Aucune valeur
                </span>
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__icon-arrow"
                    height="16px"
                    title="Ouvrir la liste déroulante"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select custom chip info 1`] = `
<div
  class="m-base-select m-multi-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-multi-select__input"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                        0 - Simba 
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__icon-arrow"
                    height="16px"
                    title="Ouvrir la liste déroulante"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select custom select-item 1`] = `
<div
  class="m-base-select m-multi-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-multi-select__input"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                       
                            Simba
                        
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__icon-arrow"
                    height="16px"
                    title="Ouvrir la liste déroulante"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select default 1`] = `
<div
  class="m-base-select m-multi-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-multi-select__input"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                       
                            Maria Rainer
                        
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__icon-arrow"
                    height="16px"
                    title="Ouvrir la liste déroulante"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select label 1`] = `
<div
  class="m-base-select m-multi-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-multi-select__input"
      tabindex="0"
    >
      <div
        class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-multi-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  La famille Von Trapp
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                       
                            Maria Rainer
                        
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__icon-arrow"
                    height="16px"
                    title="Ouvrir la liste déroulante"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select object as options 1`] = `
<div>
  <div
    class="m-base-select m-multi-select"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="0"
      >
        <div
          class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Facultés
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                   
                  <span
                    aria-hidden="true"
                    class="m-i18n m-input-style__transparent-text"
                  >
                    Aucune valeur
                  </span>
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
  <br />
  <br />
  <br />
  <br />
  <br />
  <br />
  Value: []
</div>
`;

exports[`Storyshots modul-components|m-multi-select select all link 1`] = `
<div
  class="m-base-select m-multi-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-multi-select__input"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                       
                            Maria Rainer
                        
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__icon-arrow"
                    height="16px"
                    title="Ouvrir la liste déroulante"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select state 1`] = `
<div>
  <div
    class="m-base-select m-multi-select m--is-disabled"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="-1"
      >
        <div
          class="m-input-style m--is-label-up m--is-disabled m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-disabled m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        disabled="disabled"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-multi-select"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="0"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Readonly
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-disabled m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        disabled="disabled"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-multi-select m--is-waiting"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="0"
      >
        <div
          class="m-input-style m--is-label-up m--is-waiting m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Waiting
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
   
  <div
    class="m-base-select m-multi-select m--is-disabled"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="-1"
      >
        <div
          class="m-input-style m--is-label-up m--is-disabled m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled and error
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-disabled m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        disabled="disabled"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-multi-select m--has-validation-message"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="0"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--has-cursor-pointer m--has-error m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Readonly and error
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-disabled m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        disabled="disabled"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-multi-select m--is-waiting m--has-validation-message"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="0"
      >
        <div
          class="m-input-style m--is-label-up m--is-waiting m--has-cursor-pointer m--has-error m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Waiting and error
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
   
  <div
    class="m-base-select m-multi-select m--is-disabled"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="-1"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--is-disabled m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled and readonly
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-disabled m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        disabled="disabled"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-multi-select m--is-disabled m--is-waiting"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="-1"
      >
        <div
          class="m-input-style m--is-label-up m--is-disabled m--is-waiting m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled and waiting
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-disabled m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        disabled="disabled"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-multi-select m--is-waiting"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="0"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--is-waiting m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Readonly and waiting
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-disabled m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        disabled="disabled"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-multi-select m--is-disabled m--is-waiting"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-multi-select__input"
        tabindex="-1"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--is-disabled m--is-waiting m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; margin-top: 10px; max-width: 288px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled, readonly and waiting
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-disabled m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-fakeId"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                            Maria Rainer
                        
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-fakeId"
                        class="m-chip-delete__button"
                        disabled="disabled"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__icon-arrow"
                      height="16px"
                      title="Ouvrir la liste déroulante"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select/mobile iphone6 - select all link 1`] = `
<div
  class="m-base-select m-multi-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-multi-select__input"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                 
                <span
                  aria-hidden="true"
                  class="m-i18n m-input-style__transparent-text"
                >
                  Aucune valeur
                </span>
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__icon-arrow"
                    height="16px"
                    title="Ouvrir la liste déroulante"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select/mobile iphone6 1`] = `
<div
  class="m-base-select m-multi-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-multi-select__input"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                 
                <span
                  aria-hidden="true"
                  class="m-i18n m-input-style__transparent-text"
                >
                  Aucune valeur
                </span>
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__icon-arrow"
                    height="16px"
                    title="Ouvrir la liste déroulante"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
